--- a/companies.htm
+++ b/companies.htm
@@ -35,7 +35,7 @@ Tested: Feb 24, 2020; Passed with no problems.
 				<li><a href="repairs.htm" rel="external" data-icon="heart" data-prefetch="true" data-transition="slide">Repairs Cleaning</a></li>
 			</ul>
 		</div>
-	<h4>Amir's Moving Planner &copy; 2020</h4>
+	<h4>Plan-A-Move &copy; 2020</h4>
 	</div>
 	
 </div>
