--- a/contact.htm
+++ b/contact.htm
@@ -55,7 +55,7 @@ Tested: Feb 24, 2020; Passed with no problems.
 	</div>
 	
 	<div data-role="footer" data-position="fixed" data-id="footernav" data-theme="a">
-	<h4>Amir's Moving Planner &copy; 2020</h4>
+	<h4>Plan-A-Move &copy; 2020</h4>
 	</div>
 	
 </div>
