--- a/display.htm
+++ b/display.htm
@@ -34,7 +34,7 @@ Tested: Feb 24, 2020; Passed with no problems.
 				<li><a href="index.htm" rel="external" data-icon="home" data-transition="slide" data-direction="reverse">Home</a></li>
 			</ul>
 		</div>
-		<h4>Amir's Moving Planner &copy; 2020</h4>
+		<h4>Plan-A-Move &copy; 2020</h4>
 	</div>	
 </div>
 
