--- a/instructions.htm
+++ b/instructions.htm
@@ -26,6 +26,20 @@ Tested: Feb 24, 2020; Passed with no problems.
 	</div>
 
 	<div role="main" class="ui-content">
+		<p>
+			If you’re wondering how to prepare for a move, you’ve come to the right place!
+			We at Plan-A-Move understand that the laundry list of things to do when moving can be overwhelming.
+			We are here to help!
+			<br></br>
+			Getting organized is the key. 
+			<br></br>
+			Our Moving Supplies page will provide a list of supplies to consider when moving.
+			Repairs Cleaning will suggest things to be cleaned and/or repaired prior to your move.
+			Utilities Page will list utility companies in your area that may need to be notified of your move.
+			Moving Companies will give you a list of companies you may consider helping you move.
+			Notifications page will provide a list of people and companies that may need to be notified of your move.
+			Finally, Schedule page will help you get organized and specify what needs to be done in what order to get you moving. 
+		</p>
 	</div>
 	
 	<div data-role="footer" data-position="fixed" data-id="footernav" data-theme="a">
@@ -43,7 +57,7 @@ Tested: Feb 24, 2020; Passed with no problems.
 				<li><a href="schedule.htm" rel="external" data-icon="calendar" data-transition="slide" data-mini="true">Schedule</a></li>
 			</ul>
 		</div>
-	<h4>Amir's Moving Planner &copy; 2020</h4>
+	<h4>Plan-A-Move &copy; 2020</h4>
 	</div>
 	
 </div>
