--- a/planner.htm
+++ b/planner.htm
@@ -25,6 +25,7 @@ Tested: Feb 24, 2020; Passed with no problems.
 		<h1>Planner</h1></div>
 
 	<div role="main" class="ui-content">
+
 	</div>
 	
 	<div data-role="footer" data-position="fixed" data-id="footernav" data-theme="a">
@@ -35,7 +36,7 @@ Tested: Feb 24, 2020; Passed with no problems.
 				<li><a href="add.htm" rel="external" data-icon="plus" data-transition="slide" data-mini="true">Add Items</a></li>
 			</ul>
 		</div>
-	<h4>Amir's Moving Planner &copy; 2020</h4>
+	<h4>Plan-A-Move &copy; 2020</h4>
 	</div>
 	
 </div>
