--- a/index.htm
+++ b/index.htm
@@ -14,6 +14,14 @@ Tested: Feb 24, 2020; Passed with no problems.
 <link rel="stylesheet" href="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
 <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
 <script type="text/javascript" src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
+<style>
+	.ui-page, .ui-dialog {
+    background: transparent;
+}
+body {
+    background: url(images/moving.jpg) no-repeat center center fixed;
+}
+</style>
 </head>
 
 <body>
@@ -67,7 +75,7 @@ Tested: Feb 24, 2020; Passed with no problems.
 				<li><a href="planner.htm" rel="external" data-icon="bullets" data-prefetch="true" data-transition="slide">Planner</a></li>
 			</ul>
 		</div>
-	<h4>Amir's Moving Planner &copy; 2020</h4>
+	<h4>Plan-A-Move &copy; 2020</h4>
 	</div>
 </div>
 
