--- a/repairs.htm
+++ b/repairs.htm
@@ -34,7 +34,7 @@ Tested: Feb 24, 2020; Passed with no problems.
 				<li><a href="notifications.htm" rel="external" data-icon="alert" data-transition="slide">Notifications</a></li>
 			</ul>
 		</div>
-	<h4>Amir's Moving Planner &copy; 2020</h4>
+	<h4>Plan-A-Move &copy; 2020</h4>
 	</div>
 	
 </div>
