--- a/supplies.htm
+++ b/supplies.htm
@@ -47,7 +47,7 @@ Tested: Feb 24, 2020; Passed with no problems.
 				<li><a href="companies.htm" rel="external" data-icon="user" data-prefetch="true" data-transition="slide">Moving Company</a></li>
 			</ul>
 		</div>
-	<h4>Amir's Moving Planner &copy; 2020</h4>
+	<h4>Plan-A-Move &copy; 2020</h4>
 	</div>
 	
 </div>
