--- a/utilities.htm
+++ b/utilities.htm
@@ -43,7 +43,7 @@ Tested: Feb 24, 2020; Passed with no problems.
 				<li><a href="schedule.htm" rel="external" data-icon="calendar" data-transition="slide">Schedule</a></li>
 			</ul>
 		</div>
-	<h4>Amir's Moving Planner &copy; 2020</h4>
+	<h4>Plan-A-Move &copy; 2020</h4>
 	</div>	
 </div>
 
