--- a/index.htm
+++ b/index.htm
@@ -15,11 +15,8 @@ Tested: Feb 24, 2020; Passed with no problems.
 <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
 <script type="text/javascript" src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
 <style>
-	.ui-page, .ui-dialog {
-    background: transparent;
-}
-body {
-    background: url(images/moving.jpg) no-repeat center center fixed;
+.ui-page { 
+    background:papayawhip;
 }
 </style>
 </head>
