--- a/index.htm
+++ b/index.htm
@@ -30,6 +30,7 @@ Tested: Feb 24, 2020; Passed with no problems.
 
 
 	<div role="main" class="ui-content">
+		<div class="ui-block-a">
    <p>
 	Welcome to Plan-A-Move!
 	<br>
@@ -41,17 +42,19 @@ Tested: Feb 24, 2020; Passed with no problems.
 	To learn more about us, please click on the “about” icon on the top right. 
 	<br>
 	</br>
-	Let’s get started, 
-	<br>
-	</br>
+	Let’s get started...
+</p>
+		</div>
+		<div class="ui-block-b">
+			<p>
 	Please click on the “Planning Instructions” icon on the bottom left. From this menu, you will have access to a list of moving supplies, moving companies,
 	repairs cleaning to consider before the move, notifications page with a list of contacts that may need to be notified of the move,
 	Utilities icon will take you to a list of utility companies that will need to be notified as well as a schedule to keep you organized.
 	From the main menu, if you click on the “Planner Page” icon, you will have access to an “Add Item” and “Display Items” page.
 	Here you will add and view planning items as we get you moving. 
-	<br>
-	</br>
-	
+			</p>
+		</div>
+	<p>
 	   Come say Hello at 
 	   <!-- #9 URL link added -->
 	   <a href="https://www.siu.edu">SIUC</a>
