--- a/index.htm
+++ b/index.htm
@@ -30,6 +30,7 @@ Tested: Feb 24, 2020; Passed with no problems.
 
 
 	<div role="main" class="ui-content">
+		<div class="ui-grid-a">
 		<div class="ui-block-a">
    <p>
 	Welcome to Plan-A-Move!
@@ -60,7 +61,7 @@ Tested: Feb 24, 2020; Passed with no problems.
 	   <a href="https://www.siu.edu">SIUC</a>
    </p>
 	</div>
-
+</div>
 	<div data-role="footer" data-position="fixed" data-id="footernav" data-theme="a">
 		<div data-role="navbar">
 			<ul>
