--- a/companies.htm
+++ b/companies.htm
@@ -7,7 +7,7 @@ Use: Companies page of the Moving Planner program
 Author: Amir Sinanovic
 School/Term: SIU Carbondale, Spring 2020
 Developed: Jan 23, 2020
-Tested: Feb 24, 2020; Passed with no problems.
+Tested: Mar 7, 2020; Passed with no problems.
 ******************************************************************************-->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Companies</title>
@@ -25,6 +25,39 @@ Tested: Feb 24, 2020; Passed with no problems.
 		<h1>Companies</h1></div>
 
 	<div role="main" class="ui-content">
+		<!-- #5 week 8, Collapsible Content-->
+		<div data-role="collapsible">
+			<h3>Two Men And A Truck</h3>
+
+			<p>
+				Local moving is what started our brand more than 30 years ago, and we take pride in exceeding our customer's expectations! 
+				We offer a professionally trained and background checked moving team to ensure your belongings are handled with care 
+				and that your move runs smoothly.
+			</p>
+
+		</div>
+		<div data-role="collapsible">
+		<h3>Simple Moves</h3>
+
+		<p>
+			Looking for a low cost moving company in St.Louis? Call Simple Moves at 314.963.3416. From one sofa to entire home
+			we do it all for a super low price.
+		</p>
+
+	</div>
+	<div data-role="collapsible">
+		<h3>McGuire Moving & Storage</h3>
+
+		<p>
+			McGuire Moving and Storage has been delivering superior moving services to St.Louis families and businesses for
+			more than four generations. But don't just take our word for it: we have been an Angie's List Super Service 
+			Award Winner for eight straight years, St.Louis Magazine Reader's Choice Award Winner, and we have an A+ rating
+			with the Better Business Bureau. It is no wonder that we are trusted St.Louis movers. Plus, as an award winning
+			agent for Arpin Van Lines we provide the same great service on long distance moves. Check out our reviews or
+			better yet, call us at 314.241.0600 to learn more about how McGuire can start you on a stress-free move.
+		</p>
+
+	</div>
 	</div>
 	
 	<div data-role="footer" data-position="fixed" data-id="footernav" data-theme="a">
