--- a/index.htm
+++ b/index.htm
@@ -7,7 +7,7 @@ Use: Main page of the Moving Planner program
 Author: Amir Sinanovic
 School/Term: SIU Carbondale, Spring 2020
 Developed: Jan 23, 2020
-Tested: Feb 24, 2020; Passed with no problems.
+Tested: Mar 7, 2020; Passed with no problems.
 ******************************************************************************-->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Home</title>
@@ -30,36 +30,40 @@ Tested: Feb 24, 2020; Passed with no problems.
 
 
 	<div role="main" class="ui-content">
+		<!-- #2 Grid Widget, week 8-->
 		<div class="ui-grid-a">
 		<div class="ui-block-a">
-   <p>
+   <h3>
 	Welcome to Plan-A-Move!
-	<br>
-    </br>
+   </h3>
+	<p>
 	We make moving fun and easy. At Plan-A-Move we offer information, instructions, contacts, schedule, planner and more, all to make your next move as easy and smooth as possible.
-	<br>
-	</br> 
+	</p>
+	<p>
 	If at any time of the moving process you have questions for us, please don’t hesitate to reach out by clicking on the “contact” icon on top left of this page.
 	To learn more about us, please click on the “about” icon on the top right. 
-	<br>
-	</br>
+	</p>
+	<p>
 	Let’s get started...
-</p>
+	</p>
 		</div>
 		<div class="ui-block-b">
-			<p>
+	<h3>
+	How to get around...
+	</h3>
+	<p>
 	Please click on the “Planning Instructions” icon on the bottom left. From this menu, you will have access to a list of moving supplies, moving companies,
 	repairs cleaning to consider before the move, notifications page with a list of contacts that may need to be notified of the move,
 	Utilities icon will take you to a list of utility companies that will need to be notified as well as a schedule to keep you organized.
 	From the main menu, if you click on the “Planner Page” icon, you will have access to an “Add Item” and “Display Items” page.
 	Here you will add and view planning items as we get you moving. 
-			</p>
-		</div>
+	</p>
 	<p>
-	   Come say Hello at 
-	   <!-- #9 URL link added -->
-	   <a href="https://www.siu.edu">SIUC</a>
-   </p>
+		Come say Hello at 
+		<!-- #9 URL link added -->
+		<a href="https://www.siu.edu">SIUC</a>
+	</p>
+		</div>
 	</div>
 </div>
 	<div data-role="footer" data-position="fixed" data-id="footernav" data-theme="a">
