--- a/schedule.htm
+++ b/schedule.htm
@@ -7,7 +7,7 @@ Use: Schedule page of the Moving Planner program
 Author: Amir Sinanovic
 School/Term: SIU Carbondale, Spring 2020
 Developed: Jan 23, 2020
-Tested: Feb 24, 2020; Passed with no problems.
+Tested: Mar 7, 2020; Passed with no problems.
 ******************************************************************************-->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Schedule</title>
@@ -24,6 +24,29 @@ Tested: Feb 24, 2020; Passed with no problems.
 		<h1>Schedule</h1></div>
 
 	<div role="main" class="ui-content">
+		<!--#6 week 8 Responsive Table Widget-->
+		<table data-role="table" data-mode="columntoggle" id="peopleTable" class="ui-responsive">
+			<thead>
+				<tr>
+					<th>Schedule</th>
+					<th data-priority="1">1st</th>
+					<th data-priority="2">2nd</th>
+					<th data-priority="3">3rd</th>
+					<th data-priority="4">4th</th>
+					<th data-priority="5">5th</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<th></th>
+					<td>Make a Moving Inventory</td>
+					<td>Get Rid of Unneeded Items</td>
+					<td>Set a Moving Budget</td>
+					<td>Set a Moving Date</td>
+					<td>Choose the Best Movers for You</td>
+				</tr>				
+			</tbody>
+		</table>
 	</div>
 	
 	<div data-role="footer" data-position="fixed" data-id="footernav" data-theme="a">
