--- a/schedule.htm
+++ b/schedule.htm
@@ -25,23 +25,19 @@ Tested: Mar 7, 2020; Passed with no problems.
 
 	<div role="main" class="ui-content">
 		<!--#6 week 8 Responsive Table Widget-->
-		<table data-role="table" data-mode="columntoggle" id="peopleTable" class="ui-responsive">
+		<table data-role="table" data-mode="columntoggle" id="scheduleTable" class="ui-responsive">
 			<thead>
 				<tr>
 					<th>Schedule</th>
 					<th data-priority="1">1st</th>
 					<th data-priority="2">2nd</th>
 					<th data-priority="3">3rd</th>
-					<th data-priority="4">4th</th>
-					<th data-priority="5">5th</th>
 				</tr>
 			</thead>
 			<tbody>
 				<tr>
 					<th></th>
 					<td>Make a Moving Inventory</td>
-					<td>Get Rid of Unneeded Items</td>
-					<td>Set a Moving Budget</td>
 					<td>Set a Moving Date</td>
 					<td>Choose the Best Movers for You</td>
 				</tr>				
