--- a/add.htm
+++ b/add.htm
@@ -14,29 +14,47 @@ Tested: Mar 7, 2020; Passed with no problems.
 <link rel="stylesheet" href="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
 <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
 <script type="text/javascript" src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
+<script src="js/application.js"></script>
 </head>
 
 <body>
 
 	<div data-role="page" id="addPage" data-title="Add Page">
 
-	<div data-role="header">
-		<h1>Add</h1></div>
-
-	<div role="main" class="ui-content">
-	</div>
+		<div data-role="header">
+			<h1>Add</h1></div>
 	
-	<div data-role="footer" data-position="fixed" data-id="footernav" data-theme="a">
-		<div data-role="navbar">
-			<ul>
-				<li><a href="" data-rel="back" rel="external" data-icon="back" data-transition="slide" data-direction="reverse">Back</a></li>
-				<li><a href="index.htm" rel="external" data-icon="home" data-transition="slide" data-direction="reverse">Home</a></li>
-			</ul>
+		<div role="main" class="ui-content">
+			<form>
+				<div class="ui-field-contain">
+					<input id="title" type="text" placeholder="Item Title"/>
+				</div>
+				<div class="ui-field-contain">
+					<textarea id="note" placeholder="Planning Item"></textarea>
+				</div>
+				<div class="ui-grid-a">
+					<div class="ui-block-a">
+						<input id="btnSubmit" type="button" value="Save">
+					</div>
+					<div class="ui-block-b">
+						<a href="display.htm" data-role="button" rel="external" data-transition="slide">Display Items</a>
+					</div>
+				</div>
+			</form>
+			</div>
 		</div>
-	<h4>Plan-A-Move &copy; 2020</h4>
+		
+		<div data-role="footer" data-position="fixed" data-id="footernav" data-theme="a">
+			<div data-role="navbar">
+				<ul>
+					<li><a href="" data-rel="back" rel="external" data-icon="back" data-transition="slide" data-direction="reverse">Back</a></li>
+					<li><a href="index.htm" rel="external" data-icon="home" data-transition="slide" data-direction="reverse">Home</a></li>
+				</ul>
+			</div>
+		<h4>Plan-A-Move &copy; 2020</h4>
+		</div>
+		
 	</div>
-	
-</div>
 
 </body>
 </html>
