--- a/add.htm
+++ b/add.htm
@@ -14,7 +14,7 @@ Tested: Mar 7, 2020; Passed with no problems.
 <link rel="stylesheet" href="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
 <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
 <script type="text/javascript" src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
-<script src="js/application.js"></script>
+<script src="js/note.js"></script>
 </head>
 
 <body>
