--- a/display.htm
+++ b/display.htm
@@ -14,7 +14,7 @@ Tested: Mar 7, 2020; Passed with no problems.
 <link rel="stylesheet" href="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
 <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
 <script type="text/javascript" src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
-<script src="js/application.js"></script>
+<script src="js/note.js"></script>
 </head>
 
 <body>
@@ -26,6 +26,10 @@ Tested: Mar 7, 2020; Passed with no problems.
 		<h1>Display</h1></div>
 
 	<div role="main" class="ui-content">
+		<!--test-->
+		<ul id="list_notes" data-role="listview">
+
+		</ul>
 	</div>
 	
 	<div data-role="footer" data-position="fixed" data-id="footernav" data-theme="a">
