--- a/planner.htm
+++ b/planner.htm
@@ -24,8 +24,24 @@ Tested: Mar 7, 2020; Passed with no problems.
 
 	<div data-role="header">
 		<a href="index.htm" rel="external" data-icon="home" data-transition="slide" data-direction="reverse">Home</a>
-		<h1>Planner</h1></div>
+		<h1>Planner</h1>
+	</div>
+	<div role="main" class="ui-content">
+		<p>
+			Welcome to Plan-A-Move planner page!
+		</p>
+		<p>
+			Use this page as your personal planner to help ensure you don't forget anything on your next move.
+		</p>
+		<p>
+			To add an item to your list, click on the "Add Items" icon on the bottom right of this page, add a title of your
+			note and a brief description and click "Save".
+		</p>
+		<p>
+			You can view your notes by clicking on the "Display Items" icon on the bottom left of this page.
+		</p>
 
+	</div>
 	
 	
 	<div data-role="footer" data-position="fixed" data-id="footernav" data-theme="a">
