--- a/add.htm
+++ b/add.htm
@@ -34,7 +34,7 @@ Tested: Mar 7, 2020; Passed with no problems.
 				</div>
 				<div class="ui-grid-a">
 					<div class="ui-block-a">
-						<input id="btnSubmit" type="button" value="Save">
+						<input id="btnAddNote" type="button" value="Save">
 					</div>
 					<div class="ui-block-b">
 						<a href="display.htm" data-role="button" rel="external" data-transition="slide">Display Items</a>
