--- a/add.htm
+++ b/add.htm
@@ -34,10 +34,10 @@ Tested: Mar 7, 2020; Passed with no problems.
 				</div>
 				<div class="ui-grid-a">
 					<div class="ui-block-a">
-						<input id="btnAddNote" type="button" value="Save">
+						<input id="btnNoThanks" type="submit" value="No Thanks"/>
 					</div>
 					<div class="ui-block-b">
-						<a href="display.htm" data-role="button" rel="external" data-transition="slide">Display Items</a>
+						<input id="btnAddNote" type="button" value="Save">
 					</div>
 				</div>
 			</form>
