--- a/add.htm
+++ b/add.htm
@@ -34,10 +34,13 @@ Tested: Mar 7, 2020; Passed with no problems.
 				</div>
 				<div class="ui-grid-a">
 					<div class="ui-block-a">
-						<input id="btnNoThanks" type="submit" value="No Thanks"/>
+						<input id="btnNoThanks" type="submit" value="Cancel"/>
 					</div>
 					<div class="ui-block-b">
 						<input id="btnAddNote" type="button" value="Save">
+					</div>
+					<div>
+						<a href="display.htm" data-role="button" rel="external" data-transition="slide">Display Items</a>
 					</div>
 				</div>
 			</form>
