--- a/display.htm
+++ b/display.htm
@@ -26,6 +26,7 @@ Tested: Mar 7, 2020; Passed with no problems.
 		<h1>Display</h1></div>
 
 	<div role="main" class="ui-content">
+		<ul id="notesList" data-role="listview" data-inset="true"></ul>
 	</div>
 	
 	<div data-role="footer" data-position="fixed" data-id="footernav" data-theme="a">
