week 9 final test

--- a/display.htm
+++ b/display.htm
@@ -26,6 +26,7 @@ Tested: Mar 7, 2020; Passed with no problems.
 		<h1>Display</h1></div>
 
 	<div role="main" class="ui-content">
+		<!--week 9, display notes listview-->
 		<ul id="notesList" data-role="listview" data-inset="true"></ul>
 	</div>
 	
