--- a/add.htm
+++ b/add.htm
@@ -39,9 +39,6 @@ Tested: Mar 7, 2020; Passed with no problems.
 					<div class="ui-block-b">
 						<input id="btnAddNote" type="button" value="Save">
 					</div>
-					<div>
-						<a href="display.htm" data-role="button" rel="external" data-transition="slide">Display Items</a>
-					</div>
 				</div>
 			</form>
 			</div>
@@ -50,7 +47,7 @@ Tested: Mar 7, 2020; Passed with no problems.
 		<div data-role="footer" data-position="fixed" data-id="footernav" data-theme="a">
 			<div data-role="navbar">
 				<ul>
-					<li><a href="" data-rel="back" rel="external" data-icon="back" data-transition="slide" data-direction="reverse">Back</a></li>
+					<li><a href="display.htm" data-role="button" rel="external" data-transition="slide">Display Items</a></li>
 					<li><a href="index.htm" rel="external" data-icon="home" data-transition="slide" data-direction="reverse">Home</a></li>
 				</ul>
 			</div>
