--- a/add.htm
+++ b/add.htm
@@ -42,12 +42,11 @@ Tested: Mar 7, 2020; Passed with no problems.
 				</div>
 			</form>
 			</div>
-		</div>
 		
 		<div data-role="footer" data-position="fixed" data-id="footernav" data-theme="a">
 			<div data-role="navbar">
 				<ul>
-					<li><a href="display.htm" data-role="button" rel="external" data-transition="slide">Display Items</a></li>
+					<li><a href="display.htm" rel="external" data-icon="bars" data-transition="slide" data-direction="reverse">Display Items</a></li>
 					<li><a href="index.htm" rel="external" data-icon="home" data-transition="slide" data-direction="reverse">Home</a></li>
 				</ul>
 			</div>
